force-app/main/default/objects/OSG_Assigned_Resource__c/OSG_Assigned_Resource__c.object-meta.xml
<CustomObject>
    <label>OSG Assigned Resource</label>
    <nameField>
        <displayFormat>AR-{000000}</displayFormat>
        <label>Assigned Resource Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OSG Assigned Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>