force-app/main/default/objects/OSG_Assigned_Resource__c/fields/Actual_Toll_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Toll_Cost__c</fullName>
    <label>Actual Toll Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>