force-app/main/default/objects/OSG_Assigned_Resource__c/fields/Actual_Training_End__c.field-meta.xml
<CustomField>
    <fullName>Actual_Training_End__c</fullName>
    <label>Actual Training End</label>
    <type>DateTime</type>
</CustomField>