force-app/main/default/objects/OSG_Assigned_Resource__c/fields/Actual_Training_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Training_Hours__c</fullName>
    <formula>(( Actual_Training_End__c - Actual_Training_Start__c )*24) - IF(Lunch_Taken__c, 0.5, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Training Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>