force-app/main/default/objects/OSG_Assigned_Resource__c/fields/Actual_Travel_Distance__c.field-meta.xml
<CustomField>
    <fullName>Actual_Travel_Distance__c</fullName>
    <inlineHelpText>Distance in km</inlineHelpText>
    <label>Actual Travel Distance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>