force-app/main/default/objects/OSG_Assigned_Resource__c/fields/Actual_Travel_Time_Return__c.field-meta.xml
<CustomField>
    <fullName>Actual_Travel_Time_Return__c</fullName>
    <inlineHelpText>Time in minutes</inlineHelpText>
    <label>Actual Travel Time Return</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>