force-app/main/default/objects/OSG_Assigned_Resource__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <formula>IF(
 ServiceAppointment__r.Distance_Learning__c = true,
 0,
 IF(
  NOT(ISBLANK(ServiceResource__r.Home_Address__c)),
  DISTANCE( ServiceAppointment__r.FSL__InternalSLRGeolocation__c,  ServiceResource__r.Home_Address__c, &quot;km&quot;),
  0
 )
)</formula>
    <inlineHelpText>Distance in KM between service resource home and SA address (Straight Line)</inlineHelpText>
    <label>Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>