force-app/main/default/objects/OSG_Assigned_Resource__c/fields/Estimated_Travel_Distance__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Travel_Distance__c</fullName>
    <inlineHelpText>Distance in km</inlineHelpText>
    <label>Estimated Travel Distance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>