force-app/main/default/objects/OSG_Assigned_Resource__c/fields/Google_Maps_URL__c.field-meta.xml
<CustomField>
    <fullName>Google_Maps_URL__c</fullName>
    <formula>If(
 Distance__c &gt; 0,
HYPERLINK(&quot;https://www.google.com/maps/dir/?api=1&amp;origin=&quot; &amp; TEXT(ServiceResource__r.Home_Address__Latitude__s) &amp; &quot;,&quot; &amp;  TEXT(ServiceResource__r.Home_Address__Longitude__s) &amp; &quot;&amp;destination=&quot; &amp; TEXT(ServiceAppointment__r.FSL__InternalSLRGeolocation__Latitude__s) &amp; &quot;,&quot; &amp;  TEXT(ServiceAppointment__r.FSL__InternalSLRGeolocation__Longitude__s) &amp; &quot;&amp;travelmode=driving&quot;, &quot;Google Maps URL&quot;, &quot;_self&quot;),
&quot;&quot;
)</formula>
    <label>Google Maps URL</label>
    <type>Text</type>
</CustomField>