force-app/main/default/objects/OSG_Assigned_Resource__c/fields/Hourly_Premium_Notes__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Premium_Notes__c</fullName>
    <label>Hourly Premium Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>