force-app/main/default/objects/OSG_Assigned_Resource__c/fields/Is_Shadow_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Is_Shadow_Trainer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Shadow Trainer</label>
    <type>Checkbox</type>
</CustomField>