force-app/main/default/objects/OSG_Assigned_Resource__c/fields/Lunch_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Scheduled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Lunch Scheduled</label>
    <type>Checkbox</type>
</CustomField>