force-app/main/default/objects/OSG_Assigned_Resource__c/fields/Lunch_Taken__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Taken__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Lunch Taken</label>
    <type>Checkbox</type>
</CustomField>