force-app/main/default/objects/OSG_Assigned_Resource__c/fields/Overnight_Required__c.field-meta.xml
<CustomField>
    <fullName>Overnight_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overnight Required</label>
    <type>Checkbox</type>
</CustomField>