force-app/main/default/objects/OSG_Assigned_Resource__c/fields/Resource_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Resource_Hourly_Rate__c</fullName>
    <label>Resource Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>