force-app/main/default/objects/OSG_Assigned_Resource__c/fields/Scheduled_Training_Hours__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Training_Hours__c</fullName>
    <formula>(( Scheduled_End__c - Scheduled_Start__c )*24) - IF(Lunch_Scheduled__c, 0.5, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Training Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>