force-app/main/default/objects/OSG_Assigned_Resource__c/fields/ServiceAppointment__c.field-meta.xml
<CustomField>
    <fullName>ServiceAppointment__c</fullName>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>OSG Assigned Resources</relationshipLabel>
    <relationshipName>OSG_Assigned_Resources</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>