force-app/main/default/objects/OSG_Assigned_Resource__c/fields/ServiceAppointmentProduct__c.field-meta.xml
<CustomField>
    <fullName>ServiceAppointmentProduct__c</fullName>
    <formula>ServiceAppointment__r.Product_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Appointment Product</label>
    <type>Text</type>
</CustomField>