force-app/main/default/objects/OSG_Assigned_Resource__c/fields/ServiceResource__c.field-meta.xml
<CustomField>
    <fullName>ServiceResource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>OSG Assigned Resources</relationshipLabel>
    <relationshipName>OSG_Assigned_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>