force-app/main/default/objects/OSG_Assigned_Resource__c/validationRules/Missing_Required_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Missing_Required_Field</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
 ISBLANK(Scheduled_End__c),
 ISBLANK(Scheduled_Start__c),
 ISBLANK(ServiceResource__c),
 ISBLANK(ServiceAppointment__c)
)</errorConditionFormula>
    <errorMessage>OSG Assigned Resource requires a scheduled start/end time, a trainer and a service appointment!</errorMessage>
</ValidationRule>