force-app/main/default/objects/OSG_Assigned_Resource__c/validationRules/Must_Be_Within_SA_Start_Timeframe.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Be_Within_SA_Start_Timeframe</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
 Scheduled_Start__c &lt; ServiceAppointment__r.SchedStartTime,
 Scheduled_Start__c &gt; ServiceAppointment__r.SchedEndTime
)</errorConditionFormula>
    <errorMessage>Scheduled Start Time must be within the SA timeframe!</errorMessage>
</ValidationRule>