force-app/main/default/objects/OSG_Assigned_Resource__c/validationRules/Scheduled_Times_Must_Be_On_Same_Day.validationRule-meta.xml
<ValidationRule>
    <fullName>Scheduled_Times_Must_Be_On_Same_Day</fullName>
    <active>false</active>
    <errorConditionFormula>(Scheduled_End__c - Scheduled_Start__c) &gt;= 1</errorConditionFormula>
    <errorMessage>Scheduled Start and End must be within 24 hours of each other!</errorMessage>
</ValidationRule>