force-app/main/default/objects/OSG_Assigned_Resource__c/validationRules/Scheduled_Times_Must_Match_SA.validationRule-meta.xml
<ValidationRule>
    <fullName>Scheduled_Times_Must_Match_SA</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  TIMEVALUE(Scheduled_Start__c) !=  TIMEVALUE( ServiceAppointment__r.SchedStartTime ),
  TIMEVALUE(Scheduled_End__c) !=  TIMEVALUE( ServiceAppointment__r.SchedEndTime )
)</errorConditionFormula>
    <errorMessage>Scheduled Time must match the ServiceAppointment Scheduled Time!</errorMessage>
</ValidationRule>